# SuperiorAgent

./: .gitignore  README.md  pyproject.toml  reproduce_bug.py
superior_agent/: __init__.py  __main__.py
superior_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
superior_agent/agent/: artifact_controller.py  brain.py  registry.py
superior_agent/agent/tools/: edit_file.py  evaluate_math.py  get_session_info.py  get_system_info.py  get_weather.py  increase_max_rounds.py  list_processes.py  run_shell.py  search_tools.py  search_wikipedia.py  stop_process.py  update_artifact.py  write_file.py
superior_agent/core/: llm_bridge.py  models.py  templates.py
superior_agent/frontend/: cli.py  themes.py
tests/: test_artifact_controller.py  test_brain.py  test_dynamic_rounds.py  test_enhanced_tools.py  test_llm_bridge.py  test_memory.py  test_registry.py
